# NeoMind

./: .cirrus.yml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  README.zh.md  TECHNICAL_DEBT_CLEANUP_PLAN.md  cargo  config.minimal.toml  docker-compose.yml  echo  package-lock.json  package.json
crates/agent/: Cargo.toml
crates/agent/benches/: agent_bench.rs
crates/agent/src/: concurrency.rs  context_selector.rs  lib.rs  llm.rs  prompts.rs  session.rs  smart_conversation.rs  task_orchestrator.rs  translation.rs
crates/agent/tests/: agent_performance_test.rs  all_models_evaluation_test.rs  comprehensive_evaluation_framework.rs  comprehensive_llm_analysis_test.rs  comprehensive_quality_test.rs  conversation_context_integration_test.rs  conversation_improvement_test.rs  conversation_integration.rs  device_simulation_conversation_test.rs  device_simulator_integration_test.rs  dialog_e2e_test.rs  dialog_test.rs  e2e_integration_test.rs  extended_conversation.rs  full_industry_intention_test.rs  full_integration_test.rs  industry_solutions_test.rs  llm_integration_test.rs  load_test.rs  model_comparison_evaluation.rs  mqtt_domain_simulator_test.rs  multi_turn_conversation.rs  multi_turn_conversation_test.rs  multilingual_comparison_test.rs  no_loop_stability.rs  real_conversation_loop_test.rs  real_dialogue_comprehensive_test.rs  real_llm_conversation_test.rs  real_world_simulation_test.rs  realistic_conversation_test.rs  realistic_device_data.rs  realistic_performance_test.rs  semantic_mapping_test.rs  smart_conversation_integration_test.rs  tool_calling_capability_test.rs
crates/api/: Cargo.toml
crates/api/src/: audit.rs  auth.rs  auth_users.rs  builtin_plugins.rs  cache.rs  config.rs  crypto.rs  event_persistence.rs  event_services.rs  lib.rs  openapi.rs  rate_limit.rs  shutdown.rs  validator.rs
crates/api/tests/: integration.rs  session_fix_test.rs
crates/automation/: Cargo.toml
crates/automation/src/: conversion.rs  device_type_generator.rs  error.rs  intent.rs  lib.rs  nl2automation.rs  store.rs  threshold_recommender.rs  transform.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commands/: Cargo.toml
crates/commands/src/: ack.rs  adapter.rs  api.rs  command.rs  events.rs  lib.rs  queue.rs  state.rs
crates/devices/: Cargo.toml
crates/devices/examples/: device_demo.rs  test_binary.rs  test_image_storage.rs  test_read.rs  test_storage.rs
crates/devices/src/: adapter.rs  builtin_types.rs  discovery.rs  embedded_broker.rs  hass_discovery.rs  hass_discovery_listener.rs  hass_discovery_mapper.rs  lib.rs  mdl.rs  mdl_format.rs  modbus.rs  mqtt.rs  mqtt_v2.rs  plugin_adapter.rs  plugin_registry.rs  registry.rs  service.rs  service_types.rs  telemetry.rs  unified_extractor.rs
crates/devices/tests/: e2e_service_test.rs  integration_test.rs  registry_service_test.rs  telemetry_test.rs  unified_pipeline_test.rs
crates/eval-runner/: Cargo.toml
crates/eval-runner/skills/: eval-chat.md
crates/eval-runner/src/: case.rs  fallback.rs  fixture.rs  lib.rs  main.rs  record.rs  report.rs  runner.rs  runtime.rs  seed.rs  state_query.rs  test_server.rs  validate.rs
crates/eval-runner/tests/: case_parsing.rs  fallback.rs  fixture.rs  report.rs  runtime.rs  state_query.rs  validate.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: lib.rs  registry.rs
crates/llm/: Cargo.toml
crates/llm/examples/: backend_switching.rs
crates/llm/src/: backend_plugin.rs  config.rs  instance_manager.rs  lib.rs  plugin_adapter.rs  rate_limited_client.rs  tokenizer.rs
crates/llm/tests/: conversation_test.rs
crates/memory/: Cargo.toml
crates/memory/src/: budget.rs  compression.rs  embeddings.rs  error.rs  graph.rs  importance.rs  lib.rs  mid_term.rs  semantic.rs  short_term.rs  tiered.rs  unified.rs
crates/messages/: Cargo.toml
crates/messages/src/: category.rs  error.rs  lib.rs  manager.rs  message.rs
crates/neomind-agent/: Cargo.toml
crates/neomind-agent/benches/: agent_bench.rs
crates/neomind-agent/examples/: verify_language_policy.rs
crates/neomind-agent/src/: concurrency.rs  context_selector.rs  error.rs  image_utils.rs  lib.rs  llm.rs  memory_extraction.rs  session.rs  smart_conversation.rs  state_machine.rs  task_orchestrator.rs  testing_helpers.rs  translation.rs
crates/neomind-agent/tests/: cancellation_test.rs  comprehensive_agent_eval.rs  conversation_integration.rs  full_integration_test.rs  language_adaptation_test.rs  llm_error_surfacing.rs  llm_integration_test.rs  load_test.rs  memory_30rounds.rs  memory_extraction_integration.rs  multimodal_message_test.rs  planning_integration.rs  real_world_simulation_test.rs  realistic_performance_test.rs  test_multi_tool_inline.rs  tool_calling_evaluation.rs  tool_calling_evaluation_real.rs  tool_calling_test.rs  tool_chain_test.rs  web_fetch_file_tools_test.rs
crates/neomind-api/: Cargo.toml  cargo:clippy  cargo:fmt
crates/neomind-api/src/: audit.rs  auth.rs  auth_users.rs  cache.rs  capability_providers.rs  config.rs  crypto.rs  event_services.rs  lib.rs  openapi.rs  rate_limit.rs  shutdown.rs  startup.rs  validator.rs
crates/neomind-api/tests/: integration.rs  session_fix_test.rs
crates/neomind-cli/: Cargo.toml
crates/neomind-cli-ops/: Cargo.toml
crates/neomind-cli-ops/src/: agent_cmd.rs  api_client.rs  auth_cmd.rs  auto_auth.rs  automation.rs  broker.rs  config_cmd.rs  connector.rs  dashboard.rs  (+15 more)
crates/neomind-commands/: Cargo.toml
crates/neomind-core/: Cargo.toml
crates/neomind-data-push/: Cargo.toml
crates/neomind-devices/: Cargo.toml
crates/neomind-extension-runner/: Cargo.toml
crates/neomind-extension-sdk/: Cargo.toml  README.md
crates/neomind-llm/: Cargo.toml
crates/neomind-memory/: Cargo.toml
crates/neomind-messages/: Cargo.toml
crates/neomind-native-capability-smoke-extension/: Cargo.toml
crates/neomind-rules/: Cargo.toml
crates/neomind-sandbox/: Cargo.toml
crates/neomind-storage/: Cargo.toml
crates/neomind-testing/: Cargo.toml  README.md
(+1985 files in other folders)
