[workspace]
members = [
    "crates/neomind-core",
    "crates/neomind-api",
    "crates/neomind-cli",
    "crates/neomind-devices",
    "crates/neomind-storage",
    "crates/neomind-rules",
    "crates/neomind-messages",
    "crates/neomind-agent",
    "crates/neomind-extension-sdk",
    "crates/neomind-extension-runner",
    # Testing utilities (not part of main release)
    "crates/neomind-core/tests/fixtures/smoke-extension",
]
exclude = ["web"]
resolver = "2"

[workspace.package]
version = "0.6.5"
edition = "2021"
rust-version = "1.85"
authors = ["NeoMind Contributors"]
license = "Apache-2.0"
repository = "https://github.com/camthink-ai/NeoMind"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
# IMPORTANT: preserve_order feature is required for ABI compatibility between
# extension-runner and extension binaries. This ensures serde_json::Value uses
# IndexMap instead of HashMap, which has a stable memory layout across versions.
serde_json = { version = "1", features = ["preserve_order"] }
bincode = "1.3"
base64 = "0.22"
hex = "0.4"
urlencoding = "2.1"

# UI (Web)
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "limit"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
rand = "0.8"
# Use rustls instead of OpenSSL for better cross-compilation support
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "stream"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1-rustls", "ring", "rustls-native-certs"] }

# Storage
redb = "2.1"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
bcrypt = "0.15"

# Concurrent data structures
dashmap = "6"

# Timezone support
chrono-tz = "0.10"

# Utilities
regex = "1"
lru = "0.12"
toml = "0.8"
async-stream = "0.3"
tempfile = "3"
parking_lot = "0.12"
