[package]
name = "edge-ai-api"
version.workspace = true
edition.workspace = true

[features]
default = ["embedded-broker", "webhook", "email"]
embedded-broker = []
webhook = []
email = []
static = ["rust-embed"]

[dependencies]
edge-ai-core = { path = "../core" }
edge-ai-agent = { path = "../agent" }
edge-ai-llm = { path = "../llm" }
edge-ai-devices = { path = "../devices", features = ["embedded-broker"] }
edge-ai-rules = { path = "../rules" }
edge-ai-messages = { path = "../messages", features = ["webhook", "email"] }
edge-ai-storage = { path = "../storage" }
edge-ai-memory = { path = "../memory" }
edge-ai-tools = { path = "../tools" }
edge-ai-commands = { path = "../commands" }
edge-ai-automation = { path = "../automation" }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
async-trait = "0.1"
get_if_addrs = "0.5"
hostname = "0.4"
base64 = { workspace = true }
async-stream = "0.3"
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
atty = "0.2"
sysinfo = "0.32"

# Encryption
aes-gcm = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
bcrypt = { workspace = true }

# Persistence
redb = { workspace = true }
bincode = { workspace = true }

# Static file embedding (optional, requires 'static' feature)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
