[package]
name = "edge-ai-automation"
version.workspace = true
edition.workspace = true

[dependencies]
edge-ai-core = { path = "../core" }
edge-ai-llm = { path = "../llm" }
edge-ai-rules = { path = "../rules" }
edge-ai-devices = { path = "../devices" }

# Force axum 0.7 to avoid conflicts with rumqttd's axum 0.6
axum = { version = "0.7", default-features = false }

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Encoding/decoding
hex = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

# JavaScript execution - use Boa for cross-platform support
boa_engine = "0.17"
boa_gc = "0.17"

# Storage
redb = { workspace = true }

[dev-dependencies]
futures = { workspace = true }

[features]
default = []
javascript = []
