[package]
name = "edge-ai-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "edge-ai"
path = "src/main.rs"

[dependencies]
edge-ai-core = { path = "../core" }
edge-ai-agent = { path = "../agent" }
edge-ai-api = { path = "../api" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { workspace = true }
