[package]
name = "edge-ai-devices"
version.workspace = true
edition.workspace = true

[dependencies]
edge-ai-core = { path = "../core" }
edge-ai-storage = { path = "../storage" }

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# HTTP Client
reqwest = { version = "0.12", optional = true, features = ["json"] }

# Storage
bincode = { workspace = true }
redb = { workspace = true }

# MQTT
rumqttc = { version = "0.24", optional = true }
rumqttd = { version = "0.19", optional = true }

# Discovery
mdns-sd = { version = "0.11", optional = true }
socket2 = "0.5"

# Utils
futures = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
base64 = { workspace = true }
semver = { workspace = true }

[features]
default = ["mqtt", "http"]
mqtt = ["rumqttc"]
http = ["reqwest"]
embedded-broker = ["rumqttd"]
discovery = ["mdns-sd"]
all = ["mqtt", "http", "embedded-broker", "discovery"]

[dev-dependencies]
base64 = { workspace = true }
