[package]
name = "eval-runner"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "eval-runner"
path = "src/main.rs"

[lib]
name = "eval_runner"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
neomind-agent = { path = "../neomind-agent" }
neomind-core = { path = "../neomind-core" }
neomind-cli-ops = { path = "../neomind-cli-ops" }

[dev-dependencies]
tokio-test = "0.4"
