[package]
name = "edge-ai-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edge-ai-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# HTTP client for embedding APIs
reqwest = { version = "0.12", features = ["json"] }

# LRU cache for embeddings
lru = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
