[package]
name = "neomind-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-llm = { path = "../neomind-llm", features = ["cloud"] }
neomind-tools = { path = "../neomind-tools" }
neomind-devices = { path = "../neomind-devices" }
neomind-storage = { path = "../neomind-storage" }
neomind-rules = { path = "../neomind-rules" }
neomind-messages = { path = "../neomind-messages" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = "0.3"
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = "0.22"
# Cron scheduling libraries
cron = "0.12"
# Optional system info dependency

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
anyhow = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
