[package]
name = "neomind-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-llm = { path = "../neomind-llm", features = ["cloud"] }
neomind-devices = { path = "../neomind-devices" }
neomind-storage = { path = "../neomind-storage" }
neomind-rules = { path = "../neomind-rules" }
neomind-messages = { path = "../neomind-messages" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = "0.3"
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
# Cron scheduling libraries
cron = "0.12"

# Memory system dependencies (merged from neomind-memory)
reqwest = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
anyhow = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
