[package]
name = "neomind-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["ollama", "cloud"]
ollama = []
cloud = []
llamacpp = []
openai = ["cloud"]
anthropic = ["cloud"]
google = ["cloud"]
xai = ["cloud"]
all = ["ollama", "cloud", "llamacpp", "openai", "anthropic", "google", "xai"]

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-devices = { path = "../neomind-devices" }
neomind-storage = { path = "../neomind-storage" }
neomind-rules = { path = "../neomind-rules" }
neomind-messages = { path = "../neomind-messages" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = "0.3"
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
# Cron scheduling libraries
cron = "0.12"

# Memory system dependencies (merged from neomind-memory)
reqwest = { workspace = true }
lru = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }

# Platform-specific dependencies for shell tool
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
anyhow = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
