[package]
name = "neomind-api"
version.workspace = true
edition.workspace = true

[dev-dependencies]
# Enable testing feature when running tests
neomind-api = { path = ".", features = ["testing"] }

[features]
default = ["embedded-broker", "webhook", "email"]
embedded-broker = []
webhook = []
email = []
static = ["rust-embed", "mime_guess"]
testing = []  # Enable test-only APIs for parallel test execution

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-agent = { path = "../neomind-agent" }
neomind-llm = { path = "../neomind-llm" }
neomind-devices = { path = "../neomind-devices", features = ["embedded-broker"] }
neomind-rules = { path = "../neomind-rules" }
neomind-messages = { path = "../neomind-messages", features = ["webhook", "email"] }
neomind-storage = { path = "../neomind-storage" }

# JavaScript execution (merged from neomind-automation)
boa_engine = "0.17"

# Encoding (merged from neomind-automation)
hex = { workspace = true }
urlencoding = "2.1"

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws", "multipart", "macros"] }
tower-http = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
async-trait = { workspace = true }
get_if_addrs = "0.5"
base64 = { workspace = true }
async-stream = { workspace = true }
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
atty = "0.2"
sysinfo = "0.32"
tempfile = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
bcrypt = { workspace = true }

# Persistence
redb = { workspace = true }
bincode = { workspace = true }

# Version comparison
semver = { workspace = true }

# Static file embedding (optional, requires 'static' feature)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
