[package]
name = "neomind-cli-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
neomind-core = { path = "../neomind-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
