[package]
name = "neomind-cli-ops"
version = "0.8.5"
edition = "2021"

[dependencies]
neomind-core = { path = "../neomind-core" }
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Auto-auth: read API key from local redb database
redb = { workspace = true }
bincode = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
