[package]
name = "neomind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neomind"
path = "src/main.rs"

[features]
default = []
static = ["neomind-api/static"]

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-agent = { path = "../neomind-agent" }
neomind-api = { path = "../neomind-api" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
zip = "2.1"

# CLI
clap = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
tokio-test = "0.4"
