[package]
name = "neomind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neomind"
path = "src/main.rs"

[features]
default = []
static = ["neomind-api/static"]

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-agent = { path = "../neomind-agent" }
neomind-api = { path = "../neomind-api" }
neomind-cli-ops = { path = "../neomind-cli-ops" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
zip = "2.1"

# Jemalloc global allocator — replaces glibc malloc to avoid per-thread arena
# fragmentation (server RSS was climbing 4-6 GB over days; jemalloc returns
# freed memory to the OS promptly and packs small allocations tightly).
tikv-jemallocator = "0.6"

# CLI
clap = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
tokio-test = "0.4"
