[package]
name = "neomind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neomind"
path = "src/main.rs"

[features]
default = []
static = ["neomind-api/static"]

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-agent = { path = "../neomind-agent" }
neomind-api = { path = "../neomind-api" }
neomind-cli-ops = { path = "../neomind-cli-ops" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
zip = "2.1"

# CLI
clap = { workspace = true }

# Jemalloc global allocator (Linux only) — glibc malloc arena fragmentation
# causes RSS to climb 4-6 GB over days. macOS/Windows don't use glibc so
# they're unaffected. tikv-jemalloc-sys doesn't compile on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
tokio-test = "0.4"
