[package]
name = "neomind-core"
version.workspace = true
edition.workspace = true

[features]
default = []
wasmi = ["dep:wasmi", "dep:wasmi-validation"]
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"

# Optional WASM runtime
wasmi = { version = "1.0", optional = true }
wasmi-validation = { version = "0.5", optional = true }

# Optional tiktoken for accurate token counting
tiktoken-rs = { version = "0.6", optional = true }

# Plugin system enhancements
semver = { version = "1", features = ["serde"] }
libloading = "0.8"
notify = "6.1"
toml = "0.8"
bitflags = "2"
dirs = "5"
